--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,7 @@ renv/*
 lid.176.ftz
 !language_codes.csv
 
+.vscode
 
 # exclude data folders by default
 data/interim/*
@@ -198,4 +199,3 @@ data/raw/*
 
 !tests/test_files/datasets/*.csv
 !tests/test_files/datasets/*.pkl
-.vscode/settings.json
